* deprecations
  * sign_out_all_scopes defaults to true as security measure
  * http authenticatable is disabled by default

* enhancements
  * Added OAuth 2 support
  * sign_out_via is available in the router to configure the method used for sign out (by github.com/martinrehfeld)
  * Improved Ajax requests handling in failure app (by github.com/spastorino)
  * Added request_keys to easily use request specific values (like subdomain) in authentication
  * Increased the size of friendly_token to 60 characters (reduces the chances of a successful brute attack)
  * Ensure the friendly token does not include "_" or "-" since some e-mails may not autolink it properly (by github.com/rymai)
  * Extracted encryptors into :encryptable for better bcrypt support
  * :rememberable is now able to use salt as token if no remember_token is provided
  * Store the salt in session and expire the session if the user changes his password
  * Allow :stateless_token to be set to true avoiding users to be stored in session through token authentication

* bugfix
  * after_sign_in_path_for always receives a resource
  * Do not execute Warden::Callbacks on Devise::TestHelpers (by github.com/sgronblo)
  * Password recovery and account unlocking takes into account authentication keys (by github.com/RStankov)

== 1.1.3

* bugfix
  * Add reply-to to e-mail headers by default
  * Updated the views generator to respect the rails :template_engine option (by github.com/fredwu)
  * Check the type of HTTP Authentication before using Basic headers
  * Avoid invalid_salt errors by checking salt presence (by github.com/thibaudgg)
  * Forget user deletes the right cookie before logout, not remembering the user anymore (by github.com/emtrane)
  * Fix for failed first-ever logins on PostgreSQL where column default is nil (by github.com/bensie)
  * :default options is now honored in migrations

== 1.1.2

* bugfix
  * Compatibility with latest Rails routes schema

== 1.1.1

* bugfix